--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -6,6 +6,7 @@
   --secondary-font: "Open Sans", sans-serif;
   --primary-color: #00a7e1;
   --secondary-color: #003459;
+  --reverse-color: #ff581e;
   --light-color: #fff;
   --dark-color: #00171f;
   --padding-1: 5px;
@@ -38,7 +39,7 @@ body {
 }
 
 .screen-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
@@ -56,6 +57,10 @@ body {
 .btn-secondary {
   color: var(--light-color);
   background: var(--secondary-color);
+}
+.btn-reverse {
+  color: var(--light-color);
+  background: var(--reverse-color);
 }
 .btn-light {
   color: var(--dark-color);
